--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,9 @@
-rootProject.name = 'secure-todo-maker'
-include 'api'
+pluginManagement {
+  plugins {
+    id 'org.springframework.boot' version "$springbootVersion"
+  }
+}
 
+rootProject.name = 'secure-todo-maker'
+
+include 'api', 'service', 'persistence'
