--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 plugins {
-  id 'org.springframework.boot'
+  id 'java'
   id 'checkstyle'
+  id 'jacoco'
+  id 'jacoco-report-aggregation'
+  id 'org.springframework.boot'
+}
+
+apply plugin: 'jacoco-report-aggregation'
+
+tasks.named('check') {
+  dependsOn tasks.named('testCodeCoverageReport', JacocoReport)
 }
 
 def disable = {
@@ -11,9 +20,16 @@ def enable = {
   enabled = true
 }
 
+dependencies {
+  implementation project(':api')
+  implementation project(':service')
+  implementation project(':persistence')
+}
+
 allprojects {
   apply plugin: 'java'
   apply plugin: 'checkstyle'
+  apply plugin: 'io.spring.dependency-management'
 
   group = "$groupId"
   version = "$projectVersion"
@@ -35,7 +51,7 @@ allprojects {
 
 subprojects {
   apply plugin: 'org.springframework.boot'
-  apply plugin: 'io.spring.dependency-management'
+  apply plugin: 'jacoco'
 
   dependencies {
     compileOnly 'org.projectlombok:lombok'
@@ -49,10 +65,15 @@ subprojects {
     testImplementation 'org.awaitility:awaitility'
   }
 
-  test {
-    useJUnitPlatform()
-  }
-
   bootJar disable
   jar enable
+
+  jacocoTestReport {
+    dependsOn test
+  }
+
+  test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+  }
 }
