--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # Project
-groupId = io.github.aj8gh
-projectVersion = 1.0.0-SNAPSHOT
-javaVersion = 21
-mainClassName = io.github.aj8gh.todosec.Application
-
+groupId=io.github.aj8gh
+projectVersion=1.0.0-SNAPSHOT
+javaVersion=21
+mainClassName=io.github.aj8gh.todosec.Application
+# Jacoco
+minimumCoverage=0.8
+shouldFailOnViolation=false
 # Plugin Versions
 springbootVersion=3.2.4
-
-# Dependency Versions
