--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,12 @@ groupId=io.github.aj8gh
 projectVersion=1.0.0-SNAPSHOT
 javaVersion=21
 mainClassName=io.github.aj8gh.todosec.Application
+apiModule=:api
+persistenceModule=:persistence
+serviceModule=:service
 # Jacoco
 minimumCoverage=0.8
 shouldFailOnViolation=false
+jacocoBuildScript=gradle/jacoco.gradle
 # Plugin Versions
 springbootVersion=3.2.4
