--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,9 @@ serviceModule=:service
 # Jacoco
 minimumCoverage=0.8
 shouldFailOnViolation=false
-jacocoBuildScript=gradle/jacoco.gradle
 # Plugin Versions
 springbootVersion=3.2.4
+# Gradle Scripts
+allProjectsBuildScript=gradle/allProjects.gradle
+subProjectsBuildScript=gradle/subProjects.gradle
+jacocoBuildScript=gradle/jacoco.gradle
