--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
   id 'java'
   id 'org.springframework.boot'
+  id 'jacoco-report-aggregation'
+  id 'jacoco'
+  id 'checkstyle'
 }
 
 apply from: jacocoBuildScript
