--- a/gradle/allProjects.gradle
+++ b/gradle/allProjects.gradle
@@ -1,6 +1,7 @@
 allprojects {
   apply plugin: 'java'
   apply plugin: 'checkstyle'
+  apply plugin: 'org.springframework.boot'
   apply plugin: 'io.spring.dependency-management'
 
   group = groupId
