Issue and verify JWT tokens

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,8 @@ minimumCoverage=0.8
 shouldFailOnViolation=false
 # Plugin Versions
 springbootVersion=3.2.4
+# Dependency versions
+jjwtVersion=0.12.5
 # Gradle Scripts
 allProjectsBuildScript=gradle/allProjects.gradle
 subProjectsBuildScript=gradle/subProjects.gradle
