Add component tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@ shouldFailOnViolation=false
 # Plugin Versions
 springbootVersion=3.2.4
 # Dependency versions
+cucumberVersion=7.18.0
+junitPlatformVersion=1.11.0-M2
 jjwtVersion=0.12.5
 # Gradle Scripts
 allProjectsBuildScript=gradle/allProjects.gradle
