--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
   implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
   implementation "io.jsonwebtoken:jjwt:$jjwtVersion"
