--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ jjwtVersion=0.12.5
 allProjectsBuildScript=gradle/allProjects.gradle
 subProjectsBuildScript=gradle/subProjects.gradle
 jacocoBuildScript=gradle/jacoco.gradle
+postgresqlVersion=42.7.3
+liquibaseVersion=4.28.0
